--- a/app/src/main/res/layout/camera_view_layout.xml
+++ b/app/src/main/res/layout/camera_view_layout.xml
@@ -7,6 +7,7 @@
     tools:context="com.quyuanjin.im2.camera.CameraView">
 
 
+
     <com.cjt2325.cameralibrary.JCameraView
         android:id="@+id/jcameraview"
         android:layout_width="match_parent"
@@ -14,5 +15,20 @@
         app:duration_max="10000"
         app:iconMargin="20dp"
         app:iconSize="30dp"
-        app:iconSrc="@drawable/ic_camera_enhance_black_24dp"/>
+        app:iconSrc="@drawable/ic_camera_enhance_black_24dp"
+>
+
+    <ImageView
+        android:id="@+id/pictu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+       android:layout_marginStart="300dp"
+        android:layout_marginTop="500dp"
+        android:background="@mipmap/ic_func_pic" />
+
+
+
+    </com.cjt2325.cameralibrary.JCameraView>
+
+
 </LinearLayout>
