--- a/app/src/main/res/layout/chat_ac.xml
+++ b/app/src/main/res/layout/chat_ac.xml
@@ -11,27 +11,28 @@
         <com.qmuiteam.qmui.widget.QMUITopBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-<com.qmuiteam.qmui.layout.QMUIButton
-    android:id="@+id/backbtn"
-    android:text="返回"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+
+            <com.qmuiteam.qmui.layout.QMUIButton
+                android:id="@+id/backbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="返回" />
 
             <TextView
                 android:id="@+id/uuidtextview"
                 android:layout_width="@dimen/len_100"
                 android:layout_height="match_parent"
-                 android:layout_gravity="right"/>
+                android:layout_gravity="right" />
         </com.qmuiteam.qmui.widget.QMUITopBarLayout>
 
 
-        <android.support.v7.widget.RecyclerView
+        <ListView
             android:id="@+id/char_ac_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
 
-        </android.support.v7.widget.RecyclerView>
+        </ListView>
 
         <include layout="@layout/conversation_input_panel" />
     </LinearLayout>
