--- a/app/src/main/res/layout/contract_fragment.xml
+++ b/app/src/main/res/layout/contract_fragment.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -114,4 +120,5 @@
             android:layout_height="fill_parent"
             android:layout_gravity="right"/>
     </FrameLayout>
+</LinearLayout>
 </LinearLayout>
